<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/PagePadding"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/NormalText"
            />

        <TextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space"
            android:text="孔子"
            style="@style/NormalText"
            />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="@dimen/normal_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            style="@style/NormalText"
            />

        <TextView
            android:id="@+id/person_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space"
            android:text="男"
            style="@style/NormalText"
             />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="@dimen/normal_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            style="@style/NormalText"
            />

        <TextView
            android:id="@+id/person_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space"
            android:text="72"
            style="@style/NormalText"
            />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="@dimen/normal_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_to_death"
            style="@style/NormalText"
            />

        <TextView
            android:id="@+id/person_birth_to_death"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="前511 ~ 前479"
            android:paddingLeft="@dimen/space"
            style="@style/NormalText"
            />

    </LinearLayout>


    <LinearLayout
        android:paddingTop="@dimen/lager_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life"
            style="@style/LagerText"
            />


        <TextView
            android:id="@+id/person_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space"
            android:textSize="@dimen/text_normal"
            android:text="无"
            />


    </LinearLayout>

</LinearLayout>

</ScrollView>